--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
       <div class="title pb-3">
         <h1 class="bg-light">Fake News</h1>
       </div>
-      <img src="bias_meter.png">
-    </div>
+		<svg width="900" height="100">
+			<defs>
+				<linearGradient id="svgGradient" x1="0%" x2="100%" y1="0%" y2="0%">
+					<stop class="start" offset="0%" stop-color="blue" stop-opacity="1"></stop>
+					<stop offset="50%" stop-color="white" stop-opacity="1"></stop>
+					<stop class="end" offset="100%" stop-color="red" stop-opacity="1"></stop>
+				</linearGradient>
+			</defs>
+			<rect x="0%" y="25%" width="100%" height="50%" style="stroke: black; stroke-width: 2; fill: url(&quot;#svgGradient&quot;);"></rect>
+			<polygon id="biasIndicator" points="450,75 460,90 440,90"></polygon>
+		</svg>
     <div class="new-stories">
       <div class="container pt-3">
         <h2 class="text-center bg-light">National Emergency</h2>
@@ -67,5 +76,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+ 
+	<script src="https://d3js.org/d3.v5.min.js"></script>
+
+	<script src="javascript/index.js"></script>
   </body>
 </html>
