--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
         <div id="hits" class="pt-3"></div>
       </div>
     </div>
+    <div class="space pt-5 pb-5"></div>
+    <div class="space pt-5 pb-5"></div>
+    <div class="space pt-5 pb-5"></div>
+    <div class="space pt-5 pb-5"></div>
+    <div class="space pt-5 pb-5"></div>
+    <div class="space pt-5 pb-5"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
