--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.8.0/dist/instantsearch.min.js"></script>
     <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+    <script src="javascript/rainbowvis.js"></script>
     <script src="javascript/index.js"></script>
     <script src="javascript/app.js"></script>
   </body>
