--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <title>Fake-News</title>
   </head>
   <body>
+    <div class="head-bar">
+        <div class="profile-picture">
+          <img src="images/profile.png"></img>
+        </div>
+    </div>
     <div class="container text-center m-3 text-center mx-auto">
       <div class="title pb-3">
         <h1 class="bg-light">Measure your bias!</h1>
