--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <div class="head-bar">
-        <div class="profile-picture">
-          <img src="images/profile.png"></img>
-        </div>
+      <div id="profile-picture">
+        <img src="images/profile.png"></img>
+      </div>
     </div>
     <div class="container text-center m-3 text-center mx-auto">
       <div class="title pb-3">
