--- a/signedIn.html
+++ b/signedIn.html
@@ -16,7 +16,9 @@
     <div class="head-bar">
 
       <div id="profile-picture">
-        <img src="images/profile.png"></img>
+        <a href="profile.html">
+          <img src="images/profile.png"></img>
+        </a>
       </div>
 
     </div>
