--- a/signUp.html
+++ b/signUp.html
@@ -43,9 +43,7 @@
                                 <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
                                 <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
                             </div>
-                            <div class="form-group form-button">
-                                <input type="submit" name="signup" id="signup" class="form-submit" value="Register">
-                            </div>
+                            <div id="reg-button"><a href="signedIn.html">Register</a></div>
                         </form>
                     </div>
                     <div class="signup-image">
