Added Logout Button

--- a/signedIn.html
+++ b/signedIn.html
@@ -20,6 +20,7 @@
           <img src="images/profile.png"></img>
         </a>
       </div>
+      <div id="logout-button"><a href="index.html">Log Out</a></div>
 
     </div>
     <div class="container text-center m-3 text-center mx-auto">
