--- a/signUp.html
+++ b/signUp.html
@@ -41,14 +41,14 @@
                             </div>
                             <div class="form-group">
                                 <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
-                                <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
+                                <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree to all statements in the <a href="#" class="term-service">Terms of Service</a></label>
                             </div>
                             <div id="reg-button"><a href="signedIn.html">Register</a></div>
                         </form>
                     </div>
                     <div class="signup-image">
                         <figure><img src="images/signup.png" alt="sign up image"></figure>
-                        <a href="index.html" class="signup-image-link">I am already member</a>
+                        <a href="index.html" class="signup-image-link">I am already a member</a>
                     </div>
                 </div>
             </div>
