--- a/signUp.html
+++ b/signUp.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
     <title>Fake News Sign Up</title>
 
     <!-- Font Icon -->
@@ -22,7 +26,7 @@
             <div class="container">
                 <div class="signup-content">
                     <div class="signup-form">
-                        <h2 class="form-title">Sign up</h2>
+                        <h1 class="form-title">Sign up</h1>
                         <form method="POST" class="register-form" id="register-form">
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
@@ -44,12 +48,12 @@
                                 <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
                                 <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree to all statements in the <a href="#" class="term-service">Terms of Service</a></label>
                             </div>
-                            <div id="reg-button"><a href="signedIn.html">Register</a></div>
+                            <div id="reg-button"><a href="signedIn.html"><text>Register</text></a></div>
                         </form>
                     </div>
                     <div class="signup-image">
                         <figure><img src="images/signup.png" alt="sign up image"></figure>
-                        <a href="index.html" class="signup-image-link">I am already a member</a>
+                        <a href="index.html" class="signup-image-link"><text>I am already a member</text></a>
                     </div>
                 </div>
             </div>
