--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
       </div>
     </div>  
     <div class="container pt-4">
-      <h1 class="text-center bg-light">Search for the news sources you frequent!</h1>
-      <div class="row justify-content-md-center text-center mx-auto pt-3">
+      <h1 class="text-center bg-light">News Source Bias Evaluation</h1>
+      <div class="row justify-content-md-center text-center mx-auto pt-5">
         <div class="col-md-7 mx-auto">
           <canvas id="myChart" width="100%" height="100%"></canvas>
         </div>
@@ -118,15 +118,16 @@
           <div class="searchbar">
             <div class="container pt-5">
               <div id="searchbox" onkeydown="wipeCurrentHits(event)" onkeyup="getSources(event)"></div>
+              <h6 id="guide" class="pt-4 pl-4 pr-4">In the search box above, find the news sources that you most frequently use. Selected sources will be plotted with respect to political bias and factual reporting.</h6>
               <div id="hits" class="pt-3"></div>
             </div>
           </div>
         </div>
       </div>
-    
+      <p class="pt-5 font-weight-light">All data is freely taken from Ad Fontes Media, a Public Benefit Corporation (PBC) of Colorado found in 2018. Ad Fontes Media makes no revenue from advertisements, solely relying on donations and sales of licenses. It should be noted that Ad Fontes Media is not a "nonpartisan fact tank," so users should be appropriately cautious. Click <a href="https://www.adfontesmedia.com/about/">here</a> to read Ad Fontes Media's defense of their methodology and decide for yourself.</p>
     </div>
     
-    <div class="space pt-5 pb-5"></div>
+    <div class="space pt-3 pb-3"></div>
 
 
     <!-- Optional JavaScript -->
