--- a/signUp.html
+++ b/signUp.html
@@ -15,6 +15,7 @@
 
     <!-- Main css -->
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <div class="head-bar"></div>
@@ -27,28 +28,28 @@
                 <div class="signup-content">
                     <div class="signup-form">
                         <h1 class="form-title">Sign up</h1>
-                        <form method="POST" class="register-form" id="register-form">
+                        <form action="signedIn.html" method="POST" class="register-form" id="register-form">
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Your Name"/>
+                                <input type="text" name="name" id="name" placeholder="Your Name" required minlength="1" ="" />
                             </div>
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
-                                <input type="email" name="email" id="email" placeholder="Your Email"/>
+                                <input type="email" name="email" id="email" placeholder="Your Email" required pattern=".+[@].+" required minlength="1"/>
                             </div>
                             <div class="form-group">
                                 <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="pass" id="pass" placeholder="Password"/>
+                                <input type="password" name="pass" id="pass" placeholder="Password" required minlength="1"/>
                             </div>
                             <div class="form-group">
                                 <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-                                <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password"/>
+                                <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password" required minlength="1" oninput="confirm()" />
                             </div>
-                            <div class="form-group">
-                                <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
-                                <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree to all statements in the <a href="#" class="term-service">Terms of Service</a></label>
+                            <div id="reg-button">
+                                <button>
+                                    <a>Register</a>
+                                </button>
                             </div>
-                            <div id="reg-button"><a href="signedIn.html"><text>Register</text></a></div>
                         </form>
                     </div>
                     <div class="signup-image">
