--- a/signUp.html
+++ b/signUp.html
@@ -31,7 +31,7 @@
                         <form action="signedIn.html" method="POST" class="register-form" id="register-form">
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Your Name" required minlength="1" ="" />
+                                <input type="text" name="name" id="name" placeholder="Your Name" required minlength="1" />
                             </div>
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
@@ -45,11 +45,9 @@
                                 <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
                                 <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password" required minlength="1" oninput="confirm()" />
                             </div>
-                            <div id="reg-button">
-                                <button>
+                            <button id="reg-button">
                                     <a>Register</a>
-                                </button>
-                            </div>
+                            </button>
                         </form>
                     </div>
                     <div class="signup-image">
