Update Icon Styling

--- a/signedIn.html
+++ b/signedIn.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="head-bar">
-
+      <div id="welcome">Welcome, Cori!</div>
       <div id="profile-picture">
         <a href="profile.html">
           <img src="images/profile.png"></img>
