--- a/index.html
+++ b/index.html
@@ -118,7 +118,17 @@
           <div class="searchbar">
             <div class="container pt-5">
               <div id="searchbox" onkeydown="wipeCurrentHits(event)" onkeyup="getSources(event)"></div>
-              <h6 id="guide" class="pt-4 pl-4 pr-4">In the search box above, find the news sources that you most frequently use. Selected sources will be plotted with respect to political bias and factual reporting.</h6>
+              <div id="guide" class="pt-4 pl-4 pr-4">
+                <h6>In the search box above, find the news sources that you most frequently use. Selected sources will be plotted with respect to political bias and factual reporting.</h6>
+                <h6 class="pt-2 pb-2">Here are some common examples:</h6>
+                <h4>Associated Press</h4>
+                <h4>BuzzFeed News</h4>
+                <h4>CNN</h4>
+                <h4>Fox News</h4>
+                <h4>The Huffington Post</h4>
+                <h4>The New York Times</h4>
+                <h4>The Wall Street Journal</h4>
+              </div>
               <div id="hits" class="pt-3"></div>
             </div>
           </div>
