--- a/index.html
+++ b/index.html
@@ -121,20 +121,20 @@
               <div id="guide" class="pt-4 pl-4 pr-4">
                 <h6>In the search box above, find the news sources that you most frequently use. Selected sources will be plotted with respect to political bias and factual reporting.</h6>
                 <h6 class="pt-2 pb-2">Here are some common examples:</h6>
-                <h4>Associated Press</h4>
-                <h4>BuzzFeed News</h4>
-                <h4>CNN</h4>
-                <h4>Fox News</h4>
-                <h4>The Huffington Post</h4>
-                <h4>The New York Times</h4>
-                <h4>The Wall Street Journal</h4>
+                <h4 class="example" onclick="testExamples(&quot;AP&quot;)">Associated Press</h4>
+                <h4 class="example" onclick="testExamples(&quot;BuzzFeed News&quot;)">BuzzFeed News</h4>
+                <h4 class="example" onclick="testExamples(&quot;CNN&quot;)">CNN</h4>
+                <h4 class="example" onclick="testExamples(&quot;Fox&quot;)">Fox News</h4>
+                <h4 class="example" onclick="testExamples(&quot;Huffington Post&quot;)">Huffington Post</h4>
+                <h4 class="example" onclick="testExamples(&quot;New York Times&quot;)">New York Times</h4>
+                <h4 class="example" onclick="testExamples(&quot;Wall Street Journal&quot;)">Wall Street Journal</h4>
               </div>
               <div id="hits" class="pt-3"></div>
             </div>
           </div>
         </div>
       </div>
-      <p class="pt-5 font-weight-light">All data is freely taken from Ad Fontes Media, a Public Benefit Corporation (PBC) of Colorado found in 2018. Ad Fontes Media makes no revenue from advertisements, solely relying on donations and sales of licenses. It should be noted that Ad Fontes Media is not a "nonpartisan fact tank," so users should be appropriately cautious. Click <a href="https://www.adfontesmedia.com/about/">here</a> to read Ad Fontes Media's defense of their methodology and decide for yourself.</p>
+      <p class="pt-5 font-weight-light">All data is freely taken from Ad Fontes Media, a Public Benefit Corporation (PBC) of Colorado founded in 2018. Ad Fontes Media makes no revenue from advertisements, solely relying on donations and sales of licenses. It should be noted that Ad Fontes Media is not a "nonpartisan fact tank," so users should be appropriately cautious. Click <a href="https://www.adfontesmedia.com/about/">here</a> to read Ad Fontes Media's defense of their methodology and decide for yourself.</p>
     </div>
     
     <div class="space pt-3 pb-3"></div>
