--- a/index.html
+++ b/index.html
@@ -35,26 +35,28 @@
           </li>
         </ul>
       </nav>
-
-
     </div>
-    <div class="container text-center m-3 text-center mx-auto">
-      <div class="title pb-3">
-        <h1 class="bg-light">Measure your bias!</h1>
+
+    <div class="bias-page">
+      <div class="container text-center m-3 text-center mx-auto">
+        <div class="title pb-3">
+          <h1 class="bg-light">Measure your bias!</h1>
+        </div>
+		    <svg id="biasMeter" viewBox="0 0 900 100">
+			    <defs>
+				    <linearGradient id="svgGradient" x1="0%" x2="100%" y1="0%" y2="0%">
+					    <stop class="start" offset="0%" stop-color="blue" stop-opacity="1"></stop>
+					    <stop offset="50%" stop-color="white" stop-opacity="1"></stop>
+					    <stop class="end" offset="100%" stop-color="red" stop-opacity="1"></stop>
+				    </linearGradient>
+			    </defs>
+          <text x="0%" y="20%">Liberal</text>
+          <text x="89%" y="20%">Conservative</text>
+			    <rect x="0%" y="25%" width="100%" height="50%" style="stroke: black; stroke-width: 2; fill: url(&quot;#svgGradient&quot;);"></rect>
+			    <polygon id="biasIndicator" points="450,75 470,100 430,100"></polygon>
+        </svg>
+        <div>Click on articles you find interesting. The overall bias of those articles will be reflected in the bias meter above.</div>
       </div>
-		<svg id="biasMeter" viewBox="0 0 900 100">
-			<defs>
-				<linearGradient id="svgGradient" x1="0%" x2="100%" y1="0%" y2="0%">
-					<stop class="start" offset="0%" stop-color="blue" stop-opacity="1"></stop>
-					<stop offset="50%" stop-color="white" stop-opacity="1"></stop>
-					<stop class="end" offset="100%" stop-color="red" stop-opacity="1"></stop>
-				</linearGradient>
-			</defs>
-      <text x="0%" y="20%">Left-leaning</text>
-      <text x="89%" y="20%">Right-leaning</text>
-			<rect x="0%" y="25%" width="100%" height="50%" style="stroke: black; stroke-width: 2; fill: url(&quot;#svgGradient&quot;);"></rect>
-			<polygon id="biasIndicator" points="450,75 470,100 430,100"></polygon>
-		</svg>
     <div class="new-stories">
       <div class="container pt-3">
         <h2 class="text-center bg-light">National Emergency</h2>
@@ -99,7 +101,7 @@
         </div>
       </div>
     </div>
-    <div class="container pt-4">
+    <div class="container pt-4 text-center">
       <div class="row">
         <div class="col">
         <button type="button" class="btn btn-secondary text-center" id="toggleSourcesBtn" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="toggleSources()">
@@ -108,6 +110,10 @@
         </div>
       </div>
     </div>  
+  </div>
+
+
+  <div class="source-graph">
     <div class="container pt-4">
       <h1 class="text-center bg-light">Search for the news sources you frequent!</h1>
       <div class="row justify-content-md-center text-center mx-auto pt-3">
@@ -125,6 +131,7 @@
       </div>
     
     </div>
+  </div>
     
     <div class="space pt-5 pb-5"></div>
 
