--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <canvas id="myChart" width="100%" height="100%"></canvas>
         </div>
         <div class="col-md-5 mx-auto">
-          <div class="searchbar">
+          <div id="searchbar">
             <div class="container pt-4">
               <div id="searchbox" onkeydown="wipeCurrentHits(event)" onkeyup="getSources(event)"></div>
               <div id="guide" class="pt-4 pl-4 pr-4">
