--- a/profile.html
+++ b/profile.html
@@ -13,13 +13,30 @@
     <title>Profile</title>
   </head>
   <body>
-  	<div class="head-bar">
-  		<div id="home">
-        <a href="signedIn.html">
-          <img src="images/home.png"></img>
-        </a>
+  	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="signedIn.html"><h3>Bias Buddy</h3></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Bias Meter<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Sources Graph</a>
+          </li>
+        </ul>
+        <div><h4>Welcome, Cori!</h4></div>
+        <div>
+          <button class="btn btn-outline-light my-2 my-sm-0" ><a class="text-dark" href="profile.html">Profile</a></button>
+        </div>
+        <div>
+          <button class="btn btn-outline-secondary my-2 my-sm-0" ><a class="text-dark" href="index.html">Logout</a></button>
+        </div>
       </div>
-  	</div>
+    </nav>
   	<div class="container text-center m-3 text-center mx-auto">
 	  	<div id="profile-pic">
 	  		<img src="images/profilePic.png"></img>
