--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html"><h3>Bias Buddy</h3></a>
+      <h3 class="navbar-brand">Bias Buddy</h3>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,10 +22,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Bias Meter<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#" onclick="showBiasPage()">Bias Meter<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sources Graph</a>
+            <a class="nav-link" href="#" onclick="showSourceGraph()">Sources Graph</a>
           </li>
         </ul>
         <nav>
