--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
     <div class="bias-page">
       <div class="container text-center m-3 text-center mx-auto">
-        <div class="title pb-3">
+        <div class="title pt-2">
           <h1 class="bg-light">Measure your bias!</h1>
         </div>
 		    <svg id="biasMeter" viewBox="0 0 900 100">
@@ -157,11 +157,12 @@
           </div>
         </div>
       </div>
-      <p class="pt-5 font-weight-light">All data is freely taken from Ad Fontes Media, a Public Benefit Corporation (PBC) of Colorado founded in 2018. Ad Fontes Media makes no revenue from advertisements, solely relying on donations and sales of licenses. It should be noted that Ad Fontes Media is not a "nonpartisan fact tank," so users should be appropriately cautious. Click <a href="https://www.adfontesmedia.com/about/">here</a> to read Ad Fontes Media's defense of their methodology and decide for yourself.</p>
+      <div class="pt-3 pb-3"></div>
+      <p class="text-center font-weight-light">All data is freely taken from Ad Fontes Media, a Public Benefit Corporation (PBC) of Colorado founded in 2018. Ad Fontes Media makes no revenue from advertisements, solely relying on donations and sales of licenses. It should be noted that Ad Fontes Media is not a "nonpartisan fact tank," so users should be appropriately cautious. Click <a href="https://www.adfontesmedia.com/about/">here</a> to read Ad Fontes Media's defense of their methodology and decide for yourself.</p>
     </div>
   </div>
     
-    <div class="space pt-3 pb-3"></div>
+    <div class="space pt-2 pb-2"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
