--- a/profile.html
+++ b/profile.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="algoliastuff.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.7.1/dist/instantsearch.min.css">
-    <link rel="stylesheet" type="text/css" href="css/profile.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <title>Profile</title>
   </head>
   <body>
   	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="signedIn.html"><h3>Bias Buddy</h3></a>
+      <h3 class="navbar-brand">Bias Buddy</h3>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,10 +21,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Bias Meter<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="signedIn.html" >Bias Meter<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sources Graph</a>
+            <a class="nav-link" href="signedIn.html?source-graph">Sources Graph</a>
           </li>
         </ul>
         <div><h4>Welcome, Cori!</h4></div>
@@ -70,6 +69,5 @@
     <script src="javascript/rainbowvis.js"></script>
     <script src="javascript/index.js"></script>
     <script src="javascript/app.js"></script>
-
   </body>
 </html>
