Correctly displays welcome

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <div id="login-content">
               <form action="signedIn.html">
                 <fieldset id="inputs">
-                  <input id="username" type="email" name="Email" placeholder="Your email address" required minlength="1">   
+                  <input id="username" type="email" name="email" placeholder="Your email address" required minlength="1">   
                   <input id="password" type="password" name="Password" placeholder="Password" required minlength="1">
                 </fieldset>
-                <button id="reg-button"><a>Log In</a></button>
+                <button id="reg-button"><a onclick="name()">Log In</a></button>
               </form>
             </div>                     
           </li>
