--- a/signedIn.html
+++ b/signedIn.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="#" onclick="showSourceGraph()">Sources Graph</a>
           </li>
         </ul>
-        <div><h4>Welcome, Cori!</h4></div>
+        <div><h4 id="welcome"></h4></div>
         <div>
           <button class="btn btn-outline-light my-2 my-sm-0" ><a class="text-dark" href="profile.html">Profile</a></button>
         </div>
@@ -151,5 +151,6 @@
     <script src="javascript/rainbowvis.js"></script>
     <script src="javascript/index.js"></script>
     <script src="javascript/app.js"></script>
+    <script src="javascript/main.js"></script>
   </body>
 </html>
