--- a/profile.html
+++ b/profile.html
@@ -50,8 +50,11 @@
         </div>
       </div>
 	</div>
+
 		 	<div id="graph">
+          <h2 id="graphTitle">Number of Articles Read Based on Biasness</h2>
 		  		<canvas id="lineChart"></canvas>
+          <h5 id="notice">*Clicking on the individual legend elements will toggle a hide/show effect for the corresponding graph!*</h5>
 		  </div>
 
 
