--- a/profile.html
+++ b/profile.html
@@ -50,12 +50,13 @@
         </div>
       </div>
 	</div>
-
+    <div class="container container m-3 text-center mx-auto">
 		 	<div id="graph">
           <h2 id="graphTitle">Number of Articles Read Based on Biasness</h2>
 		  		<canvas id="lineChart"></canvas>
           <h5 id="notice">*Clicking on the individual legend elements will toggle a hide/show effect for the corresponding graph!*</h5>
 		  </div>
+    </div>
 
 
 
