Format Again profile

--- a/profile.html
+++ b/profile.html
@@ -34,8 +34,8 @@
           <button class="btn btn-outline-secondary my-2 my-sm-0" ><a class="text-dark" href="index.html">Logout</a></button>
         </div>
       </div>
-    </nav>
-  	<div class="row">
+    </nav> 
+  	<div class="row justify-content-center">
       <div class="col-5">
   	  	<div id="profile-pic">
   	  		<img src="images/profilePic.png"></img>
@@ -50,7 +50,7 @@
         </div>
       </div>
 	</div>
-    <div class="container container m-3 text-center mx-auto">
+    <div class="row justify-content-center">
 		 	<div id="graph">
           <h2 id="graphTitle">Number of Articles Read Based on Biasness</h2>
 		  		<canvas id="lineChart"></canvas>
