--- a/profile.html
+++ b/profile.html
@@ -52,7 +52,7 @@
 	</div>
     <div class="row justify-content-center">
 		 	<div id="graph">
-          <h2 id="graphTitle">Number of Articles Read Based on Biasness</h2>
+          <h2 id="graphTitle">Number of Articles Read Based on Bias</h2>
 		  		<canvas id="lineChart"></canvas>
           <h5 id="notice">*Clicking on the individual legend elements will toggle a hide/show effect for the corresponding graph!*</h5>
 		  </div>
